con media queries

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -10,5 +10,7 @@ $dark-grey: #737270;
 $medium-grey: #B3B1AF;
 $white: #FFFCFA;
 $font-title: 'Roboto Condensed', sans-serif;
+$breakpoint-tablet: 768px;
+$breakpoint-mobile: 400px;
 
 
