section medicina estetica

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -9,6 +9,7 @@ $light-grey: #efeeed;
 $dark-grey: #737270;
 $medium-grey: #B3B1AF;
 $white: #FFFCFA;
+$font-color:#495057;
 $font-title: 'Roboto Condensed', sans-serif;
 $breakpoint-tablet: 768px;
 $breakpoint-mobile: 500px;
