--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -21,13 +22,29 @@ time, mark, audio, video {
   text-decoration: none;
 }
 
+body {
+  /* lightbox sin abrir */
+  /* lightbox abierto */
+  /* Contenido de Lightbox */
+  /* Botón Cerrar */
+  /* superposición Lightbox */
+}
 body h2 {
   font-family: "Roboto Condensed", sans-serif;
   font-size: 20px;
+  color: #495057;
 }
 body p {
   font-family: "Roboto", sans-serif;
   font-size: 14px;
+  color: #495057;
+}
+body h3 {
+  font-family: "Roboto Condensed", sans-serif;
+  font-size: 30px;
+  color: #495057;
+  text-align: center;
+  margin: 10px 0;
 }
 body header {
   background-color: #FFFCFA;
@@ -75,6 +92,9 @@ body #inicio .mainCarrousel #carouselExampleFade .carousel-inner .carousel-item 
 body .mainBannerMob {
   display: none;
 }
+body .mainBanner img {
+  width: 100%;
+}
 body .container {
   display: flex;
   align-items: center;
@@ -118,51 +138,162 @@ body .container .social p a {
 body .container .social p a i {
   margin-right: 5px;
 }
-body .footerContainer {
-  margin-top: 10px;
-  background-color: #FFFCFA;
+body .container .service {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
 }
-body .footerContainer div {
+body .container .service .flip-card {
+  background-color: transparent;
+  width: 150px;
+  height: 50px;
+  perspective: 1000px;
+  margin: 15px;
+}
+body .container .service .flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+body .container .service .flip-card .flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  margin: 10px;
+}
+body .container .service .flip-card .flip-card-inner .flip-card-front, body .container .service .flip-card .flip-card-inner .flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+body .container .service .flip-card .flip-card-inner .flip-card-front {
+  border: 3px solid #B33D68;
+  box-sizing: border-box;
+  border-radius: 10px;
+}
+body .container .service .flip-card .flip-card-inner .flip-card-front p {
+  margin: 12px 0px;
+}
+body .container .service .flip-card .flip-card-inner .flip-card-back {
+  background-color: #B33D68;
+  transform: rotateY(180deg);
+  border-radius: 10px;
+}
+body .container .service .flip-card .flip-card-inner .flip-card-back a {
+  text-decoration: none;
+}
+body .container .service .flip-card .flip-card-inner .flip-card-back a p {
+  margin: 12px 0px;
+  color: #FFFCFA;
+  text-align: center;
+  font-weight: bold;
+}
+body .lightbox {
+  display: none;
+}
+body .lightbox:target {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
 }
-body .footerContainer div p {
+body .lightbox figcaption {
+  width: 25rem;
+  position: relative;
+  padding: 1.5em;
+  background-color: #efeeed;
+  border-radius: 5%;
+}
+body .lightbox .close {
+  position: relative;
+  display: block;
+}
+body .lightbox .close::after {
+  right: -2rem;
+  top: -2rem;
+  width: 2rem;
+  height: 2rem;
+  position: absolute;
+  display: flex;
+  z-index: 1;
+  align-items: center;
+  justify-content: center;
+  color: #ffffff;
+  content: "×";
+  cursor: pointer;
+}
+body .lightbox .close::before {
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  background-color: rgba(0, 0, 0, 0.7);
+  content: "";
+  cursor: default;
+}
+
+.footerContainer {
+  margin-top: 10px;
+  background-color: #FFFCFA;
+  width: 100%;
+}
+.footerContainer div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-bottom: 2px;
+}
+.footerContainer div p {
   margin: 2px;
 }
-body .footerContainer div p a {
+.footerContainer div p a {
   color: #737270;
 }
-body .footerContainer div p a i {
+.footerContainer div p a i {
   margin-right: 2px;
 }
+
 @media (max-width: 500px) {
-  body .mainNav {
+  .mainNav {
     display: flex;
     flex-direction: column;
     align-items: center;
     height: 30px;
     margin: 10px;
   }
-  body .mainNav .menu {
+  .mainNav .menu {
     display: none;
   }
-  body .mainCarrousel {
+
+  .mainCarrousel {
     display: none;
   }
-  body .mainBannerMob {
+
+  .mainBannerMob {
     display: block;
   }
-  body .mainBannerMob img {
+  .mainBannerMob img {
     width: 100%;
   }
-  body .container {
+
+  .container {
     margin-top: 10px;
   }
-  body .container .staffDescription, body .container .productContainer, body .container .social {
+  .container .staffDescription, .container .productContainer, .container .social {
     margin: 10px;
   }
-  body .container .imgstaff, body .container .imgProd, body .container .locationMap {
+  .container .imgstaff, .container .imgProd, .container .locationMap {
     display: none;
   }
 }
