--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -5,11 +5,23 @@ body{
     h2{
         font-family: $font-title;
         font-size: 20px;
+        color: $font-color;
       }
       p{
           font-family: $font;
           font-size: 14px;
+          color: $font-color;
+
       }
+      h3{
+        font-family: $font-title;
+        font-size: 30px;
+        color: $font-color;
+        text-align: center;
+        margin: 10px 0 ;
+
+    }
+       
 
 
 header{
@@ -68,6 +80,11 @@ header{
 .mainBannerMob{
     display: none;
 }
+.mainBanner{
+    img{
+    width: 100%;  
+  }
+}
 .container{
   display: flex;
   align-items: center;  
@@ -113,15 +130,139 @@ header{
     }
     
     }
+       
+    .service{
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+        .flip-card{
+            background-color: transparent;
+            width: 150px;
+            height: 50px;
+            perspective: 1000px;
+            margin: 15px;
             
-        }
+            &:hover{
+                .flip-card-inner{
+                    transform: rotateY(180deg);
+                }
+            }
+            .flip-card-inner {
+                position: relative;
+                width: 100%;
+                height: 100%;
+                text-align: center;
+                transition: transform 0.6s;
+                transform-style: preserve-3d;
+                border-radius: 10px;
+                box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+                margin: 10px;
+                .flip-card-front, .flip-card-back {
+                    position: absolute;
+                    width: 100%;
+                    height: 100%;
+                    -webkit-backface-visibility: hidden;
+                    backface-visibility: hidden;
+                  }
+                .flip-card-front {                    
+                    border: 3px solid $purple;
+                    box-sizing: border-box;
+                    border-radius: 10px;
+                    p{
+                        margin: 12px 0px;
+                    }
+                    
+                }
+                .flip-card-back {
+                    background-color: $purple;
+                   
+                    transform: rotateY(180deg);
+                    border-radius: 10px;
+                    a{
+                        text-decoration: none;
+                        
+                        p{
+                        margin: 12px 0px;
+                        color:$white;
+                        text-align: center;
+                        font-weight: bold;}
+                    }
+                  }
+            }
+        }}
+    }
+    
+    
+/* lightbox sin abrir */
+.lightbox {
+    display: none;
+  }
+  
+  /* lightbox abierto */
+  .lightbox:target {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  /* Contenido de Lightbox */
+  .lightbox figcaption {
+    width: 25rem;
+    position: relative;
+    padding: 1.5em;
+    background-color: $light-grey;
+    border-radius: 5%;
+  }
+  
+  /* Botón Cerrar */
+  .lightbox .close {
+    position: relative;
+    display: block;
+  }
+  
+  .lightbox .close::after {
+    right: -2rem;
+    top: -2rem;
+    width: 2rem;
+    height: 2rem;
+    position: absolute;
+    display: flex;
+    z-index: 1;
+    align-items: center;
+    justify-content: center;
+    color: #ffffff;
+    content: "×";
+    cursor: pointer;
+  }
+  
+  /* superposición Lightbox */
+  .lightbox .close::before {
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    background-color: rgba(0,0,0,.7);
+    content: "";
+    cursor: default;
+  }
+}
     .footerContainer{
         margin-top: 10px;
         background-color:$white ;
+      
+        width: 100%;
         div{
             display: flex;
             align-items: center;
             justify-content: center;
+            padding-bottom: 2px;
             p{
                 margin: 2px;
                 a {
@@ -164,7 +305,7 @@ header{
     
     
     }
-    }}
+    }
     
     
    
