ajuste de color

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -13,5 +13,8 @@ $font-color:#495057;
 $font-title: 'Roboto Condensed', sans-serif;
 $breakpoint-tablet: 768px;
 $breakpoint-mobile: 500px;
+$gold:#FFDC31;
+$mid-gold:#E8B320;
+$dark-gold: #FFAE24;
 
 
