--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -88,7 +88,8 @@ header{
 .container{
   display: flex;
   align-items: center;  
-  margin-top: 40px;
+  margin-top: 20px;
+  margin-bottom: 20px;
     .staffDescription{
       margin: 40px;
       display: flex;
@@ -104,13 +105,16 @@ header{
             font-family: $font;
             text-decoration: none;
             text-transform: uppercase;
-            color:$purple;
+            color:$gold;
             font-weight: bold;
             text-align: center;
             padding:5px;
+            display: block;
+            width: 130px;
             &:hover{
-                background-color: $purple;
+                background-color: $gold;
                 color:$white;
+                border-radius: 10px;
                 
             }
         }
@@ -121,10 +125,11 @@ header{
         p{
         margin: 20px;
         a{
-
+            text-decoration: none;
             color:$dark-grey;
         i{
             margin-right: 5px;
+            color:$gold
         }
     }
     }
@@ -166,7 +171,7 @@ header{
                     backface-visibility: hidden;
                   }
                 .flip-card-front {                    
-                    border: 3px solid $purple;
+                    border: 3px solid $gold;
                     box-sizing: border-box;
                     border-radius: 10px;
                     p{
@@ -175,7 +180,7 @@ header{
                     
                 }
                 .flip-card-back {
-                    background-color: $purple;
+                    background-color: $gold;
                    
                     transform: rotateY(180deg);
                     border-radius: 10px;
@@ -265,7 +270,9 @@ header{
             padding-bottom: 2px;
             p{
                 margin: 2px;
+                font-size: 12px;
                 a {
+                 text-decoration: none;
                 color:$dark-grey;
                 i{
                 margin-right: 2px;
