--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -22,13 +21,6 @@ time, mark, audio, video {
   text-decoration: none;
 }
 
-body {
-  /* lightbox sin abrir */
-  /* lightbox abierto */
-  /* Contenido de Lightbox */
-  /* Botón Cerrar */
-  /* superposición Lightbox */
-}
 body h2 {
   font-family: "Roboto Condensed", sans-serif;
   font-size: 20px;
@@ -54,14 +46,22 @@ body header {
   position: fixed;
   top: 0;
   left: 0;
-  height: 80px;
+  height: 120px;
   z-index: 10;
   width: 100%;
 }
 body header .mainNav {
-  margin: 30px;
+  flex-direction: column;
+  align-items: center;
+  margin: 10px;
+}
+body header .mainNav .logo {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+}
+body header .mainNav .logo a img {
+  width: 50px;
+  height: 50px;
 }
 body header .mainNav .menu ul {
   display: flex;
@@ -79,18 +79,18 @@ body header .mainNav .menu ul li a {
 body header .mainNav .menu ul li a:hover {
   font-weight: bold;
 }
-body #inicio {
-  margin-top: 80px;
+body .main-container {
+  width: 100%;
 }
-body #inicio .mainCarrousel #carouselExampleFade .carousel-inner {
+body .main-container #inicio {
+  margin-top: 120px;
+}
+body .main-container #inicio .mainCarrousel #carouselExampleFade .carousel-inner {
   margin: auto;
   width: 100%;
 }
-body #inicio .mainCarrousel #carouselExampleFade .carousel-inner .carousel-item .active .imgsize {
+body .main-container #inicio .mainCarrousel #carouselExampleFade .carousel-inner .carousel-item .active .imgsize {
   height: 300px;
-}
-body .mainBannerMob {
-  display: none;
 }
 body .mainBanner img {
   width: 100%;
@@ -98,37 +98,15 @@ body .mainBanner img {
 body .container {
   display: flex;
   align-items: center;
+  justify-content: center;
+  flex-direction: column;
   margin-top: 20px;
   margin-bottom: 20px;
 }
 body .container .staffDescription {
-  margin: 40px;
+  margin: 10px;
   display: flex;
   flex-direction: column;
-}
-body .container .productContainer {
-  margin: 40px;
-  display: flex;
-  flex-direction: column;
-}
-body .container .productContainer .seeMore {
-  margin: 20px;
-}
-body .container .productContainer .seeMore a {
-  font-family: "Roboto", sans-serif;
-  text-decoration: none;
-  text-transform: uppercase;
-  color: #FFDC31;
-  font-weight: bold;
-  text-align: center;
-  padding: 5px;
-  display: block;
-  width: 130px;
-}
-body .container .productContainer .seeMore a:hover {
-  background-color: #FFDC31;
-  color: #FFFCFA;
-  border-radius: 10px;
 }
 body .container .social {
   margin: 40px;
@@ -142,25 +120,27 @@ body .container .social p a {
 }
 body .container .social p a i {
   margin-right: 5px;
-  color: #FFDC31;
+  color: #efeeed;
 }
-body .container .service {
+body #service {
   display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
+  flex-direction: column;
 }
-body .container .service .flip-card {
+body #service .imgProd img {
+  display: flex;
+  width: 100%;
+}
+body #service h3 {
+  color: blue;
+}
+body #service .flip-card {
   background-color: transparent;
   width: 150px;
   height: 50px;
   perspective: 1000px;
   margin: 15px;
 }
-body .container .service .flip-card:hover .flip-card-inner {
-  transform: rotateY(180deg);
-}
-body .container .service .flip-card .flip-card-inner {
+body #service .flip-card .flip-card-inner {
   position: relative;
   width: 100%;
   height: 100%;
@@ -171,138 +151,103 @@ body .container .service .flip-card .flip-card-inner {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   margin: 10px;
 }
-body .container .service .flip-card .flip-card-inner .flip-card-front, body .container .service .flip-card .flip-card-inner .flip-card-back {
+body #service .flip-card .flip-card-inner .flip-card-front, body #service .flip-card .flip-card-inner .flip-card-back {
   position: absolute;
   width: 100%;
   height: 100%;
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
 }
-body .container .service .flip-card .flip-card-inner .flip-card-front {
-  border: 3px solid #FFDC31;
+body #service .flip-card .flip-card-inner .flip-card-front {
+  border: 3px solid #efeeed;
   box-sizing: border-box;
   border-radius: 10px;
 }
-body .container .service .flip-card .flip-card-inner .flip-card-front p {
+body #service .flip-card .flip-card-inner .flip-card-front p {
   margin: 12px 0px;
 }
-body .container .service .flip-card .flip-card-inner .flip-card-back {
-  background-color: #FFDC31;
+body #service .flip-card .flip-card-inner:hover {
+  transform: rotateY(180deg);
+}
+body #service .flip-card .flip-card-inner:hover .flip-card-back {
+  background-color: #efeeed;
   transform: rotateY(180deg);
   border-radius: 10px;
 }
-body .container .service .flip-card .flip-card-inner .flip-card-back a {
+body #service .flip-card .flip-card-inner:hover .flip-card-back a {
   text-decoration: none;
 }
-body .container .service .flip-card .flip-card-inner .flip-card-back a p {
+body #service .flip-card .flip-card-inner:hover .flip-card-back a p {
   margin: 12px 0px;
-  color: #FFFCFA;
+  color: #495057;
   text-align: center;
   font-weight: bold;
-}
-body .lightbox {
-  display: none;
-}
-body .lightbox:target {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-body .lightbox figcaption {
-  width: 25rem;
-  position: relative;
-  padding: 1.5em;
-  background-color: #efeeed;
-  border-radius: 5%;
-}
-body .lightbox .close {
-  position: relative;
-  display: block;
-}
-body .lightbox .close::after {
-  right: -2rem;
-  top: -2rem;
-  width: 2rem;
-  height: 2rem;
-  position: absolute;
-  display: flex;
-  z-index: 1;
-  align-items: center;
-  justify-content: center;
-  color: #ffffff;
-  content: "×";
-  cursor: pointer;
-}
-body .lightbox .close::before {
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  position: fixed;
-  background-color: rgba(0, 0, 0, 0.7);
-  content: "";
-  cursor: default;
 }
 
 .footerContainer {
   margin-top: 10px;
   background-color: #FFFCFA;
+  display: flex;
   width: 100%;
+  flex-direction: column;
+  position: relative;
+  bottom: 0px;
 }
-.footerContainer div {
+.footerContainer .footerNav {
   display: flex;
   align-items: center;
   justify-content: center;
   padding-bottom: 2px;
+  flex-direction: column;
 }
-.footerContainer div p {
+.footerContainer .footerNav p {
   margin: 2px;
   font-size: 12px;
 }
-.footerContainer div p a {
+.footerContainer .footerNav p a {
   text-decoration: none;
   color: #737270;
 }
-.footerContainer div p a i {
+.footerContainer .footerNav p a i {
   margin-right: 2px;
+}
+.footerContainer .copyright {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 5px 0;
+}
+.footerContainer .copyright p {
+  margin: 2px;
+  font-size: 12px;
 }
 
 @media (max-width: 500px) {
-  .mainNav {
+  body #mainHeader #navBar {
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 30px;
     margin: 10px;
   }
-  .mainNav .menu {
-    display: none;
-  }
-
-  .mainCarrousel {
-    display: none;
-  }
-
-  .mainBannerMob {
-    display: block;
-  }
-  .mainBannerMob img {
+  body .mainCarrousel {
     width: 100%;
   }
-
-  .container {
-    margin-top: 10px;
+  body .container .staffDescription, body .container .productContainer, body .container .social {
+    margin: 8px;
+    width: 100%;
+    height: 100%;
+    position: relative;
+    animation: moves-staff 4s 1;
   }
-  .container .staffDescription, .container .productContainer, .container .social {
-    margin: 10px;
-  }
-  .container .imgstaff, .container .imgProd, .container .locationMap {
-    display: none;
+  @keyframes moves-staff {
+    0% {
+      left: 800px;
+      top: 0px;
+    }
+    100% {
+      left: 0px;
+      top: 0px;
+    }
   }
 }
 
