--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -32,53 +32,63 @@ header{
     position: fixed;
     top: 0;
     left: 0;
-    height: 80px;
+    height: 120px;
     z-index: 10;
     width: 100%;
     .mainNav{
-    margin: 30px;  
-    display: flex;
-    justify-content: space-between;
-    .menu{
-        ul{
-            display: flex;
-            justify-content: space-around;
-            color: $grey;
-            li{
-               padding: 0 10px;
-               a{
-                  text-decoration: none;
-                  color:$dark-grey;
-                  font-family: $font;
-                  &:hover{
-                      font-weight: bold;
-                    }
-                 }
+    flex-direction: column;
+    align-items: center;
+    margin: 10px;
+        .logo{
+            a{
+                img{
+                width: 50px;
+                height: 50px;
                 }
-
             }
+            display: flex;
+            justify-content: center;
         }
+        .menu{
+            ul{
+                display: flex;
+                justify-content: space-around;
+                color: $grey;
+                li{
+                padding: 0 10px;
+                a{
+                    text-decoration: none;
+                    color:$dark-grey;
+                    font-family: $font;
+                    &:hover{
+                        font-weight: bold;
+                        }
+                    }
+                    }
+
+                }
+            }
     }   
 }
-#inicio{
-    margin-top:80px;
-    .mainCarrousel{
-    #carouselExampleFade{
-        .carousel-inner{
-            margin: auto;
-            width: 100%; 
-            .carousel-item .active{
-                .imgsize{
-                    height: 300px;
-                }}}
+.main-container{
+    width: 100%;
+    #inicio{
+        margin-top:120px;
+        .mainCarrousel{
+        #carouselExampleFade{
+            .carousel-inner{
+                margin: auto;
+                width: 100%; 
+                .carousel-item .active{
+                    .imgsize{
+                        height: 300px;
+                    }}}
 
-}
-   
-   }
-   
-}
-.mainBannerMob{
-    display: none;
+    }
+    
+        }
+    
+    }
 }
 .mainBanner{
     img{
@@ -87,39 +97,18 @@ header{
 }
 .container{
   display: flex;
-  align-items: center;  
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
   margin-top: 20px;
   margin-bottom: 20px;
     .staffDescription{
-      margin: 40px;
-      display: flex;
-     flex-direction: column;
-    }
-    .productContainer{
-      margin: 40px;  
+      margin: 10px;
       display: flex;
       flex-direction: column;
-        .seeMore
-        {margin: 20px;
-            a{
-            font-family: $font;
-            text-decoration: none;
-            text-transform: uppercase;
-            color:$gold;
-            font-weight: bold;
-            text-align: center;
-            padding:5px;
-            display: block;
-            width: 130px;
-            &:hover{
-                background-color: $gold;
-                color:$white;
-                border-radius: 10px;
-                
-            }
-        }
-        }
     }
+
+    
     .social{
         margin: 40px;
         p{
@@ -129,18 +118,25 @@ header{
             color:$dark-grey;
         i{
             margin-right: 5px;
-            color:$gold
+            color:$light-grey
+                }
+            }
+        }
+    
         }
     }
-    }
-    
-    }
-       
-    .service{
+    #service{
         display: flex;
-        flex-wrap: wrap;
-        align-items: center;
-        justify-content: center;
+        flex-direction: column;
+        .imgProd{
+            img{
+            display: flex;
+            width: 100%;
+            }
+        }
+        h3{
+            color:blue
+        }
         .flip-card{
             background-color: transparent;
             width: 150px;
@@ -148,171 +144,139 @@ header{
             perspective: 1000px;
             margin: 15px;
             
-            &:hover{
-                .flip-card-inner{
-                    transform: rotateY(180deg);
-                }
-            }
+            
             .flip-card-inner {
-                position: relative;
-                width: 100%;
-                height: 100%;
-                text-align: center;
-                transition: transform 0.6s;
-                transform-style: preserve-3d;
-                border-radius: 10px;
-                box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-                margin: 10px;
-                .flip-card-front, .flip-card-back {
-                    position: absolute;
+                    position: relative;
                     width: 100%;
                     height: 100%;
-                    -webkit-backface-visibility: hidden;
-                    backface-visibility: hidden;
-                  }
-                .flip-card-front {                    
-                    border: 3px solid $gold;
-                    box-sizing: border-box;
+                    text-align: center;
+                    transition: transform 0.6s;
+                    transform-style: preserve-3d;
                     border-radius: 10px;
-                    p{
-                        margin: 12px 0px;
+                    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+                    margin: 10px;
+                    .flip-card-front, .flip-card-back {
+                                position: absolute;
+                                width: 100%;
+                                height: 100%;
+                                -webkit-backface-visibility: hidden;
+                                backface-visibility: hidden;
+                            }
+                            
+                    .flip-card-front {                    
+                                border: 3px solid $light-grey;
+                                box-sizing: border-box;
+                                border-radius: 10px;
+                                p{
+                                    margin: 12px 0px;
+                                }
+                                
+                            }
+                            &:hover{ 
+                                transform: rotateY(180deg);
+                    .flip-card-back {
+                                background-color: $light-grey;
+                                transform: rotateY(180deg);
+                                border-radius: 10px;
+                                a{
+                                    text-decoration: none;
+                                    p{
+                                    margin: 12px 0px;
+                                    color:$font-color;
+                                    text-align: center;
+                                    font-weight: bold;}
+                                }
+                            }
+                        }
                     }
-                    
-                }
-                .flip-card-back {
-                    background-color: $gold;
-                   
-                    transform: rotateY(180deg);
-                    border-radius: 10px;
-                    a{
-                        text-decoration: none;
-                        
-                        p{
-                        margin: 12px 0px;
-                        color:$white;
-                        text-align: center;
-                        font-weight: bold;}
-                    }
-                  }
+               }
             }
-        }}
-    }
-    
-    
-/* lightbox sin abrir */
-.lightbox {
-    display: none;
-  }
-  
-  /* lightbox abierto */
-  .lightbox:target {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  /* Contenido de Lightbox */
-  .lightbox figcaption {
-    width: 25rem;
-    position: relative;
-    padding: 1.5em;
-    background-color: $light-grey;
-    border-radius: 5%;
-  }
-  
-  /* Botón Cerrar */
-  .lightbox .close {
-    position: relative;
-    display: block;
-  }
-  
-  .lightbox .close::after {
-    right: -2rem;
-    top: -2rem;
-    width: 2rem;
-    height: 2rem;
-    position: absolute;
-    display: flex;
-    z-index: 1;
-    align-items: center;
-    justify-content: center;
-    color: #ffffff;
-    content: "×";
-    cursor: pointer;
-  }
-  
-  /* superposición Lightbox */
-  .lightbox .close::before {
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    background-color: rgba(0,0,0,.7);
-    content: "";
-    cursor: default;
-  }
-}
+    }    
+       
+   
+
+
     .footerContainer{
         margin-top: 10px;
         background-color:$white ;
-      
+        display: flex;
         width: 100%;
-        div{
+        flex-direction: column;
+        position: relative;
+        bottom: 0px;
+        .footerNav{
             display: flex;
             align-items: center;
             justify-content: center;
             padding-bottom: 2px;
-            p{
+            flex-direction: column;
+
+            p{  
                 margin: 2px;
                 font-size: 12px;
                 a {
                  text-decoration: none;
                 color:$dark-grey;
-                i{
-                margin-right: 2px;
-            }}
+                    i{
+                    margin-right: 2px;
+                    }
+                }
+            }
         }
+        .copyright{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 5px 0;
+            p{  
+                margin: 2px;
+                font-size: 12px;
+                }
+            }
     }
-    }
+
+
         
 @media (max-width: $breakpoint-mobile){
-    .mainNav{
-        .menu{
-            display: none;
-                }
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        height: 30px;
-        margin: 10px
+body{
+    #mainHeader{
+        #navBar{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin: 10px
+        }
     }
     .mainCarrousel{
-        display: none;
-    }
-    .mainBannerMob{
-        display: block;
-        img{
         width: 100%;
     }
-    }
+    
+    
     .container{
-        margin-top: 10px;
         .staffDescription, .productContainer, .social{
-            margin: 10px;
+            margin: 8px;
+            width: 100%;
+            height: 100%;
+            position: relative;
+            animation: moves-staff 4s 1;
         }
-        .imgstaff, .imgProd, .locationMap {
-            display: none;
-        }
-    
-    
+        @keyframes moves-staff {
+            0%  {left:800px; top:0px;}
+            100% { left:0px; top:0px;}
+          }
+        
     }
     }
-    
-    
+}
+
+      
    
+
+    // color gris para complemento. Light grey. 
+    // en mobile: banner. No se ve
+    // sacar el footer. 
+    //  poner mas imagenes para mobile
+    // redefinir flipper. 
+    // mas servicios: van a estar dividos en diferentes secciones. 
+    // presentacion mica. 
+    
