--- a/styles/styles.css
+++ b/styles/styles.css
@@ -34,56 +34,49 @@ body p {
 body h3 {
   font-family: "Roboto Condensed", sans-serif;
   font-size: 30px;
-  color: #495057;
+  color: #b58e0f;
   text-align: center;
   margin: 10px 0;
 }
 body header {
   background-color: #FFFCFA;
   display: flex;
-  flex-direction: column;
+  justify-content: space-evenly;
   overflow: hidden;
   position: fixed;
   top: 0;
   left: 0;
-  height: 120px;
+  height: 65px;
   z-index: 10;
   width: 100%;
-}
-body header .mainNav {
-  flex-direction: column;
   align-items: center;
-  margin: 10px;
+  padding: 10px;
 }
-body header .mainNav .logo {
+body header .logo {
   display: flex;
   justify-content: center;
 }
-body header .mainNav .logo a img {
+body header .logo a img {
   width: 50px;
   height: 50px;
 }
-body header .mainNav .menu ul {
+body header nav, body header ul {
   display: flex;
-  justify-content: space-around;
-  color: #A5A3A1;
 }
-body header .mainNav .menu ul li {
-  padding: 0 10px;
+body header nav li, body header ul li {
+  padding-right: 15px;
 }
-body header .mainNav .menu ul li a {
+body header nav li a, body header ul li a {
   text-decoration: none;
-  color: #737270;
-  font-family: "Roboto", sans-serif;
+  color: #b58e0f;
 }
-body header .mainNav .menu ul li a:hover {
-  font-weight: bold;
+body header nav li a span, body header ul li a span {
+  font-family: "Roboto Condensed", sans-serif;
+  font-size: 20px;
 }
 body .main-container {
   width: 100%;
-}
-body .main-container #inicio {
-  margin-top: 120px;
+  margin-top: 65px;
 }
 body .main-container #inicio .mainCarrousel #carouselExampleFade .carousel-inner {
   margin: auto;
@@ -100,27 +93,82 @@ body .container {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  margin-top: 20px;
+  margin-top: 15px;
   margin-bottom: 20px;
 }
-body .container .staffDescription {
+body .container .profile-name {
+  font-family: "Roboto Condensed", sans-serif;
+  color: #b58e0f;
+  font-size: 40px;
+  margin: 10px;
+}
+body .container .profile {
   margin: 10px;
   display: flex;
-  flex-direction: column;
 }
-body .container .social {
-  margin: 40px;
+body .container .profile .profile-pic {
+  margin-right: 10px;
 }
-body .container .social p {
-  margin: 20px;
+body .container .profile .profile-pic img {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
 }
-body .container .social p a {
+body .container .profile .profile-extract p {
+  font-family: "Roboto", sans-serif;
+  color: #495057;
+  font-style: italic;
+  text-align: center;
+}
+body .container .description {
+  margin: 10px;
+  display: flex;
+  width: 100%;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+body .container .description .card {
+  width: 300px;
+  margin: 8px;
+  text-align: center;
+  height: 50px;
+  display: flex;
+  border: 0px solid rgba(0, 0, 0, 0.125);
+}
+body .container .description .card .card-inner {
+  border-radius: 10px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  background-color: transparent;
+  width: 100%;
+  border: 3px solid #b58e0f;
+  box-sizing: border-box;
+  border-radius: 10px;
+}
+body .container .description .card .card-inner a {
+  text-decoration: none;
+}
+body .container .description .card .card-inner a p {
+  margin: 12px 0px;
+}
+body .container .contact-info .social {
+  display: flex;
+}
+body .container .contact-info .social h2 {
+  margin-top: 65px;
+}
+body .container .contact-info .social p {
+  margin: 10px;
+}
+body .container .contact-info .social p a {
   text-decoration: none;
   color: #737270;
 }
-body .container .social p a i {
+body .container .contact-info .social p a i {
   margin-right: 5px;
-  color: #efeeed;
+  color: #b58e0f;
+}
+body .container .contact-info .locationMap iframe {
+  width: 800px;
 }
 body #service {
   display: flex;
@@ -131,62 +179,12 @@ body #service .imgProd img {
   width: 100%;
 }
 body #service h3 {
-  color: blue;
-}
-body #service .flip-card {
-  background-color: transparent;
-  width: 150px;
-  height: 50px;
-  perspective: 1000px;
-  margin: 15px;
-}
-body #service .flip-card .flip-card-inner {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  transition: transform 0.6s;
-  transform-style: preserve-3d;
-  border-radius: 10px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  margin: 10px;
-}
-body #service .flip-card .flip-card-inner .flip-card-front, body #service .flip-card .flip-card-inner .flip-card-back {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-}
-body #service .flip-card .flip-card-inner .flip-card-front {
-  border: 3px solid #efeeed;
-  box-sizing: border-box;
-  border-radius: 10px;
-}
-body #service .flip-card .flip-card-inner .flip-card-front p {
-  margin: 12px 0px;
-}
-body #service .flip-card .flip-card-inner:hover {
-  transform: rotateY(180deg);
-}
-body #service .flip-card .flip-card-inner:hover .flip-card-back {
-  background-color: #efeeed;
-  transform: rotateY(180deg);
-  border-radius: 10px;
-}
-body #service .flip-card .flip-card-inner:hover .flip-card-back a {
-  text-decoration: none;
-}
-body #service .flip-card .flip-card-inner:hover .flip-card-back a p {
-  margin: 12px 0px;
-  color: #495057;
-  text-align: center;
-  font-weight: bold;
+  color: #b58e0f;
+  margin-top: 65px;
 }
 
 .footerContainer {
-  margin-top: 10px;
-  background-color: #FFFCFA;
+  margin-top: 20px;
   display: flex;
   width: 100%;
   flex-direction: column;
@@ -197,16 +195,16 @@ body #service .flip-card .flip-card-inner:hover .flip-card-back a p {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding-bottom: 2px;
-  flex-direction: column;
+  padding: 2px 0;
 }
 .footerContainer .footerNav p {
   margin: 2px;
   font-size: 12px;
+  margin: 5px;
 }
 .footerContainer .footerNav p a {
   text-decoration: none;
-  color: #737270;
+  color: #b58e0f;
 }
 .footerContainer .footerNav p a i {
   margin-right: 2px;
@@ -220,24 +218,59 @@ body #service .flip-card .flip-card-inner:hover .flip-card-back a p {
 .footerContainer .copyright p {
   margin: 2px;
   font-size: 12px;
+  font-weight: bold;
+}
+.footerContainer .copyright p span {
+  color: #b58e0f;
 }
 
 @media (max-width: 500px) {
-  body #mainHeader #navBar {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 10px;
+  body header .logo a img {
+    width: 40px;
+    height: 40px;
+  }
+  body header nav li a span, body header ul li a span {
+    font-size: 15px;
   }
   body .mainCarrousel {
     width: 100%;
   }
-  body .container .staffDescription, body .container .productContainer, body .container .social {
+  body .container .profile-name {
+    font-size: 25px;
+  }
+  body .container .profile {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  body .container .profile .profile-pic {
+    margin-right: 10px;
+  }
+  body .container .profile .profile-pic img {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+  }
+  body .container .description {
+    display: flex;
+    flex-direction: column;
+  }
+  body .container .description .card {
+    width: 100%;
+  }
+  body .container .description, body .container .productContainer, body .container .social {
     margin: 8px;
     width: 100%;
     height: 100%;
     position: relative;
     animation: moves-staff 4s 1;
+  }
+  body .container .contact-info .social {
+    display: flex;
+    flex-direction: column;
+  }
+  body .container .contact-info .locationMap iframe {
+    width: 290px;
   }
   @keyframes moves-staff {
     0% {
@@ -248,6 +281,11 @@ body #service .flip-card .flip-card-inner:hover .flip-card-back a p {
       left: 0px;
       top: 0px;
     }
+  }
+
+  .footerContainer .footerNav {
+    display: flex;
+    flex-direction: column;
   }
 }
 
